2021-05-22  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* doc/learn-poke-in-y-minutes.pk (Struct Field Initializers): Update
	the example according to the recent change in behavior of field
	initializers.

2021-05-21  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* AUTHORS: Change my email address to gnu account.
	* etc/poke.rec: Likewise.
	* etc/hacking.org: Likewise.
	* HACKING: Likewise.

2021-05-21  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.c (LMAP): Simplify code, and re-compile writers
	for anonymous struct types as well as array types.
	* libpoke/pkl-gen.pks (struct_writer): Use @type_struct instead of
	type_struct.

2021-05-10  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (check_struct_field_constraint): Use
	PKL_GEN_PUSH_CONTEXT instead of DUP_CONTEXT + CLEAR_CONTEXT.  It
	is more robust.
	(array_writer): Likewise.
	(array_bounder): Likewise.
	(handle_struct_field_label): Likewise.
	(handle_struct_field_constraints): Likewise.
	(struct_mapper): Likewise.
	(struct_constructor): Likewise.
	(struct_field_writer): Likewise.
	(struct_writer): Likewise.
	(struct_integrator): Likewise.
	(complex_lmap): Likewise.

	* testsuite/poke.pkl/scons-constraints-3.pk: New test.
	* testsuite/poke.map/maps-structs-constraints-4.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2021-05-10  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (struct_mapper): Fix vars_registered with
	declarations in struct types.
	(struct_constructor): Likewise.
	* testsuite/poke.pkl/optcond-21.pk: New test.
	* testsuite/poke.map/map-optcond-12.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2021-05-10  Kostas Chasialis  <sdi1600195@di.uoa.gr>

	* poke/pk-mi-msg.c (struct pk_mi_msg): Added num_args field.
	(pk_mi_allocate_msg_args): Update num_args field.

2021-05-10  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl.c (LOAD_STD): Renamed from LOAD_RT.

2021-05-10  Jose E. Marchesi  <jemarch@gnu.org>,
